# Self-Reflective_Framework_Assistant_RAG

./: .gitignore  README.md  how_to_run.txt  nb.py  pyproject.toml  requirements.txt  vdb_prepare.py
app/: chains.py  config.py  graders.py  inference.py  interface.py  main.py  models.py  nodes.py  prompts.py  vector_store.py  workflow.py
presentations/: ErenTorlak_Graduation_SecondPresentation.pptx
